Fix some weird scss spacing

--- a/react/frontpage/components/ChatBox.scss
+++ b/react/frontpage/components/ChatBox.scss
@@ -16,15 +16,15 @@ Sass styling for frontpage chat box
 
 input {
   background-color: transparent;
-    border: solid 2px white;
-    border-radius: 20px;
-    padding: 10px;
-    width: 100%;
-    height: 100%;
+  border: solid 2px white;
+  border-radius: 20px;
+  padding: 10px;
+  width: 100%;
+  height: 100%;
 }
 
 input:focus {
-  border: solid 2px #DEB887;
+  border: solid 2px #deb887;
   outline: none;
 }
 
@@ -34,14 +34,14 @@ input:focus {
 }
 
 @media only screen and (min-width: 450px) {
-  /*ensure that chat images are full size on mobile */
+  /* ensure that chat images are full size on mobile */
   .message_form {
     padding-top: 5%;
   }
 }
 
 @media only screen and (min-width: 1000px) {
-  /*ensure that chat images are full size on mobile */
+  /* ensure that chat images are full size on mobile */
   .message_form {
     padding-top: 30%;
   }
@@ -57,7 +57,7 @@ input:focus {
 
 
 @media only screen and (min-width: 400px) {
-  /*ensure that chat images are full size on mobile */
+  /* ensure that chat images are full size on mobile */
   .message {
     /*max-width: 50%;*/
   }
@@ -65,12 +65,12 @@ input:focus {
 
 .message-body-tag {
   padding: 0.5%;
-    padding-left: 10px;
-    padding-right: 10px;
-    margin-left: 10px;
-    margin-right: 10px;
-    border-radius: 20px;
-    line-height: 1.3;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
+  border-radius: 20px;
+  line-height: 1.3;
 
     /*to handle very long words*/
        word-wrap: break-word;
@@ -81,10 +81,7 @@ input:focus {
    -moz-hyphens: auto;
         hyphens: auto;
   transition: background-color 0.2s;
-
 }
-
-
 
 .message-body-tag img {
   width: 50%;
@@ -97,7 +94,7 @@ input:focus {
 }
 
 #chatbox {
-    transition: opacity 500ms ease-in-out, height 500ms ease-in-out;
+  transition: opacity 500ms ease-in-out, height 500ms ease-in-out;
   height: 20em;
   display: fixed;
   overflow-y: scroll;
@@ -110,12 +107,13 @@ input:focus {
   color: black;
   float: left;
 }
+
 .my-message a {
   color: white;
   float: right;
 }
 
-.their-message .message-body-tag{
+.their-message .message-body-tag {
   background-color: white;
   color: black;
   display: inline-block;
@@ -125,8 +123,8 @@ input:focus {
 .their-message .message-body-tag .report-message {
   width: 0;
   border-radius: 10px;
-  overflow:hidden;
-  white-space:nowrap;
+  overflow: hidden;
+  white-space: nowrap;
   -webkit-transition: width .5s ease-in-out;
     -moz-transition: width .5s ease-in-out;
     -o-transition: width .5s ease-in-out;
@@ -141,8 +139,8 @@ input:focus {
     transition: width .5s ease-in-out;
 }
 
-.my-message .message-body-tag{
-  background-color: #5775F7;
+.my-message .message-body-tag {
+  background-color: #5775f7;
   color: white;
   display: inline-block;
   float: right;
@@ -151,10 +149,10 @@ input:focus {
 
 #message-username-tag {
   color: #CFD8FF;
-    margin-left: 10px;
-    margin-right: 10px;
-    position: inline-block;
-    clear: both;
+  margin-left: 10px;
+  margin-right: 10px;
+  position: inline-block;
+  clear: both;
 }
 
 .message-username-tag-username {
@@ -169,6 +167,7 @@ input:focus {
   line-height: 1em;
   color: white;
 }
+
 .report-message:focus {
   outline: none;
 }
@@ -183,8 +182,8 @@ input:focus {
   margin-top: 20px;
   padding: 0px;
   border-radius: 20px;
-   top: 50%;
-    transform: translateY(-50%);
+  top: 50%;
+  transform: translateY(-50%);
   border: none;
   background-color: #DEB887;
   color: white;
@@ -207,8 +206,8 @@ input:focus {
 }
 
 #load_more:active {
-    width: 5em;
-    height: 3em;
-    font-size: 1em;
-    outline: none;
+  width: 5em;
+  height: 3em;
+  font-size: 1em;
+  outline: none;
 }
